--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,16 @@
     android:layout_height="match_parent"
     android:id="@+id/main_layout">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/colorBackground">
+    <org.opencv.android.JavaCameraView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:id="@+id/activity_surface_view2"/>
 
-        <org.opencv.android.JavaCameraView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/activity_surface_view"
-            android:layout_weight="0.5"/>
-
-        <org.opencv.android.JavaCameraView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/activity_surface_view2"
-            android:layout_weight="0.5"/>
-
-    </LinearLayout>
+    <org.opencv.android.JavaCameraView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/activity_surface_view"/>
 
     <RelativeLayout
         android:id="@+id/main_layout_warning"
@@ -45,7 +36,7 @@
             android:textSize="30dp"
             android:textColor="@color/colorAccent"
             android:layout_centerInParent="true"
-            android:text="경고 입니다"/>
+            android:text="경고입니다"/>
 
     </RelativeLayout>
 
@@ -95,12 +86,13 @@
 
     </LinearLayout>
 
-            <TextView
-                android:id="@+id/main_text_speed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
-                android:layout_marginTop="3dp"
-                android:textSize="25dp"
-                android:layout_alignParentRight="true" />
+    <TextView
+        android:id="@+id/main_text_speed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:layout_marginTop="3dp"
+        android:textSize="25dp"
+        android:layout_alignParentRight="true" />
+
 </RelativeLayout>
