--- a/app/src/main/res/layout/record_log_content.xml
+++ b/app/src/main/res/layout/record_log_content.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/record_log_content"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:gravity="center"
+        android:id="@+id/record_log_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
+        android:layout_weight="0.3"
+        android:text="7:30:28"
         android:textSize="20dp"/>
+
+    <TextView
+        android:id="@+id/record_log_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_weight="0.4"
+        android:textAlignment="center"
+        android:textSize="20dp" />
 
 </LinearLayout>
