--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -10,6 +10,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/alarm_linear_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.15"
