--- a/app/src/main/res/layout/setting_main.xml
+++ b/app/src/main/res/layout/setting_main.xml
@@ -115,7 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_below="@+id/margin02"
-                android:text="해상도"
+                android:text="동영상 크기"
                 android:gravity="center"
                 android:textSize="20dp" />
 
