--- a/app/src/main/res/layout/standard_main.xml
+++ b/app/src/main/res/layout/standard_main.xml
@@ -27,18 +27,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:text="기준점을 다시 맞추고 싶은 경우"
-            android:background="@color/colorBackground"/>
-
-        <TextView
-            android:id="@+id/standard_text_retry2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="[다시 촬영] 버튼을 눌러주세요"
+            android:text="해당 사진을 기준으로 사용합니다."
             android:background="@color/colorBackground"/>
 
         <ImageView
@@ -47,34 +36,6 @@
             android:layout_height="200dp"
             android:background="@color/colorBackground"
             android:layout_marginTop="20dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/colorBackground">
-
-            <Button
-                android:id="@+id/standard_btn_test"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:text="다시 촬영"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/standard_btn_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:text="닫기"
-                android:layout_weight="1" />
-
-        </LinearLayout>
 
     </LinearLayout>
 
