--- a/app/src/main/res/layout/record_crash.xml
+++ b/app/src/main/res/layout/record_crash.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="300dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/video_layout">
 
     <VideoView
         android:id="@+id/recordcrash_videoView"
@@ -9,6 +10,33 @@
         android:layout_height="300dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"/>
+
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/video_seekbar"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_play"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="play"/>
+
+        <Button
+            android:id="@+id/button_stop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="stop"/>
+
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/recordcrash_text_content"
