--- a/app/src/main/res/layout/record_crash.xml
+++ b/app/src/main/res/layout/record_crash.xml
@@ -26,14 +26,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="play"/>
+            android:text="Play"/>
 
         <Button
             android:id="@+id/button_stop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="stop"/>
+            android:text="Stop"/>
 
 
     </LinearLayout>
