--- a/app/src/main/res/layout/record_drive.xml
+++ b/app/src/main/res/layout/record_drive.xml
@@ -38,7 +38,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@drawable/border"
-                android:text="충돌 : 0" />
+                android:text="충돌: 0" />
 
             <TextView
                 android:id="@+id/recorddrive_text_signalscore"
@@ -47,7 +47,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@drawable/border"
-                android:text="신호위반 : 0" />
+                android:text="신호위반: 0" />
 
             <TextView
                 android:id="@+id/recorddrive_text_linescore"
@@ -56,7 +56,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@drawable/border"
-                android:text="차선침범 : 0" />
+                android:text="차선침범: 0" />
 
 
         </LinearLayout>
@@ -67,14 +67,23 @@
             android:orientation="horizontal"
             android:layout_weight="1">
 
-            <TextView
+<!--            <TextView
                 android:id="@+id/recorddrive_text_sleepscore"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@drawable/border"
-                android:text="졸음 : 0" />
+                android:text="졸음: 0" />-->
+
+            <TextView
+                android:id="@+id/recorddrive_text_distancescore"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@drawable/border"
+                android:text="차간 거리: 0" />
 
             <TextView
                 android:id="@+id/recorddrive_text_attentionscore"
@@ -83,17 +92,16 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@drawable/border"
-                android:text="부주의 : 0" />
+                android:text="신호 부주의: 0" />
 
             <TextView
-                android:id="@+id/recorddrive_text_signscore"
+                android:id="@+id/recorddrive_text_cutinscore"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@drawable/border"
-                android:text="표지판 : 0" />
-
+                android:text="끼어들기: 0" />
 
         </LinearLayout>
 
@@ -104,7 +112,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:background="@drawable/border"
-            android:text="총점수 : 0"/>
+            android:text="총 점수: 0"/>
 
 
    </LinearLayout>
